# qkdisplays

./: README.md  pyproject.toml  qkdisplays.1
qkdisplays/: gtk.py  main.py
tests/: conftest.py  sway_config  test_qkdisplays.py  test_state.py
